# heliosdb

./: .gitignore  Cargo.toml  README.md
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/api/: getting-started.md  reference.md
book/src/architecture/: active-inactive.md  file-format.md  overview.md  write-read-paths.md
book/src/benchmarks/: methodology.md  running.md
book/src/internals/: block.md  bloom.md  compaction.md  memtable.md  wal.md
crates/heliosdb/: Cargo.toml
crates/heliosdb-book/: Cargo.toml
crates/heliosdb-book/src/: main.rs
crates/heliosdb-book/src/chapters/: api.rs  architecture.rs  benchmarks.rs  config.rs  internals.rs  mod.rs
crates/heliosdb-engine/: Cargo.toml
crates/heliosdb-engine/benches/: engine_bench.rs  memtable_bench.rs
crates/heliosdb-engine/src/: lib.rs
crates/heliosdb-engine/src/compaction/: mod.rs
crates/heliosdb-engine/src/iterator/: mod.rs
crates/heliosdb-engine/src/manifest/: mod.rs  version.rs
crates/heliosdb-engine/src/memtable/: btree.rs  memtable_set.rs  mod.rs  skiplist.rs  traits.rs
crates/heliosdb-engine/src/segment/: active.rs  flush.rs  inactive.rs  mod.rs
crates/heliosdb-engine/src/wal/: mod.rs
crates/heliosdb-oracle/: Cargo.toml
crates/heliosdb-oracle/src/: lib.rs
crates/heliosdb-oracle/tests/: correctness.rs
crates/heliosdb-sst/: Cargo.toml
crates/heliosdb-sst/benches/: sst_bench.rs
crates/heliosdb-sst/src/: block.rs  bloom.rs  builder.rs  compression.rs  index.rs  lib.rs  reader.rs
crates/heliosdb-types/: Cargo.toml
crates/heliosdb-types/src/: error.rs  key.rs  lib.rs
crates/heliosdb/src/: db.rs  lib.rs
crates/heliosdb/tests/: integration.rs
