[package]
name    = "heliosdb-sst"
version = "0.1.0"
edition = "2021"

[dependencies]
heliosdb-types = { workspace = true }
bytes          = { workspace = true }
crc32fast      = { workspace = true }
snap           = { workspace = true }
zstd           = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
tempfile  = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "sst_bench"
harness = false
